# ded-moroz

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: dependencies.py  settings.py
src/applications/bot/: app.py  callbacks_manager.py  utils.py
src/applications/bot/callbacks/: _base.py  base.py  create.py  delete.py  easter.py  echo.py  help.py  here.py  history.py  join.py  kick.py  leave.py  me.py  name.py  play.py  start.py
src/applications/bot/localization/: loc.py  loc.yaml  locale.py
src/models/: _types.py  room.py  target.py  user.py
src/repositories/: database.py
src/repositories/orm/: converters.py  models.py
src/services/: bot.py  moroz.py
src/shared/: bot.py  exceptions.py  random_utils.py  times.py  types.py  utils.py
tests/: conftest.py  utils.py
tests/applications/bot/: conftest.py
tests/applications/bot/callbacks/: test_base.py  test_create.py  test_echo.py  test_name.py  test_start.py
tests/applications/bot/integration/: conftest.py
tests/applications/bot/scenarios/: conftest.py  test_bot_started.py  test_create.py  test_create_here.py  test_create_join_leave.py  test_create_join_leave_delete.py  test_create_reach_limit.py  test_create_suggest_here_to_join.py  test_delete_notify_members.py  test_full.py  test_get_room_information.py  test_get_user_information.py  test_help.py  test_here.py  test_join.py  test_join_join.py  test_join_leave_notify_manager.py  test_join_notify_manager.py  test_kick_player.py  (+9 more)
tests/services/: test_moroz.py
(+8 files in other folders)
