[project]
name = "ded-moroz"
version = "0.1.0"
description = "A telegram bot to play Secret Santa"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dependency-injector>=4.48.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pytelegrambotapi>=4.29.1",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-loguru>=0.4.0",
]
